force-app/main/default/objects/LID__Log__c/fields/LID__Headers__c.field-meta.xml
<CustomField>
    <fullName>LID__Headers__c</fullName>
    <label>Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>