force-app/main/default/objects/LID__Log__c/fields/LID__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>LID__Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>