force-app/main/default/objects/LID__Log__c/fields/LID__Status_Message__c.field-meta.xml
<CustomField>
    <fullName>LID__Status_Message__c</fullName>
    <label>Status Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>